tests/snapshots/readback__bad_net.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback/bad_net.hvm
---
non-linear:
Warnings:
During readback:
  Reached Root.

<Invalid>

linear:
Warnings:
During readback:
  Reached Root.

<Invalid>
