tests/snapshots/readback__bad_net1.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback/bad_net1.hvm
---
non-linear:
λa λb a

linear:
Warnings:
During readback:
  Mismatched polarities (2 occurrences)

let #0{<Invalid> a} = λ<Invalid> $b; λ$b a
