tests/snapshots/readback__bad_net3.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback/bad_net3.hvm
---
non-linear:
λa λb a

linear:
λ#0{a *} λ* a
