tests/snapshots/readback__church_mul.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback/church_mul.hvm
---
non-linear:
λa λb (a (a (a (a (a (a b))))))

linear:
λa λb let #0{c $g} = (let #1{d $h} = a; d let #1{e f} = $h; (e (f #0{$g b}))); c
