tests/snapshots/readback__erased_call.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback/erased_call.hvm
---
non-linear:
λa 0

linear:
λa 0
