tests/snapshots/readback__id.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback/id.hvm
---
non-linear:
λa a

linear:
λa a
