tests/snapshots/readback__invalid_op2_op2.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback/invalid_op2_op2.hvm
---
non-linear:
Warnings:
During readback:
  Invalid Numeric Operation. (2 occurrences)

λa (+ (+ <Invalid> 1) (1 <Invalid>))

linear:
Warnings:
During readback:
  Invalid Numeric Operation. (2 occurrences)

λa (+ (+ <Invalid> 1) (1 <Invalid>))
