tests/snapshots/readback__nested_let.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback/nested_let.hvm
---
non-linear:
let (a, *) = let (c, b) = ((2, 4), (3, 6)); b; a

linear:
let (a, *) = let (c, b) = ((2, 4), (3, 6)); b; a
